# pp

./: .gitlab-ci.yml  BUILD.bazel  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MODULE.bazel  PLAN_PHASE2_HIGH_DENSITY_BANNER.md  banner_data.go  banner_data_test.go  daemon.go  daemon_test.go  diagnose.go  flake.nix  go.mod  go.sum  health.go  health_test.go  integration_test.go  keys_cmd.go  main.go  main_test.go  reality-check.sh  tui_wire.go  version.go
cache/: store.go  store_test.go
cmd/demo-mocks/: main.go
collectors/: collector.go  mocks.go  mocks_test.go  models.go  models_test.go  osc8.go  osc8_test.go  registry_test.go  starship_test.go
collectors/billing/: aws.go  aws_test.go  civo.go  civo_test.go  collector.go  collector_test.go  currency.go  currency_test.go  digitalocean.go  digitalocean_test.go  dreamhost.go  dreamhost_test.go  history.go  history_test.go
collectors/claude/: api.go  api_test.go  collector.go  collector_test.go  credentials.go  credentials_test.go  oauth.go  oauth_test.go  ratelimit.go  ratelimit_test.go  refresh.go
collectors/fastfetch/: collector.go  collector_test.go  types.go
collectors/infra/: collector.go  collector_test.go  dashboard.go  dashboard_test.go  kubernetes.go  kubernetes_test.go  nodemetrics.go  tailscale.go  tailscale_test.go
collectors/retry/: retry.go  retry_test.go
collectors/sysmetrics/: collector.go  collector_test.go  types.go
config/: config.go  config_test.go
display/banner/: banner.go  banner_test.go  box.go  layout.go  layout_test.go  mock.go  terminal.go  terminal_test.go  uptime_darwin.go  uptime_linux.go  uptime_other.go
display/color/: color.go  color_test.go  theme_integration_test.go
display/layout/: responsive.go  responsive_sparkline_test.go  responsive_test.go
display/render/: chafa.go  fallback.go  fallback_test.go  iterm2.go  protocol.go  protocol_test.go
display/starship/: config.go  config_test.go  output.go  output_test.go
display/tui/: app.go  app_test.go  billing_tab.go  billing_tab_test.go  claude_tab.go  claude_tab_test.go  fetch.go  (+12 more)
docs/: ARCHITECTURE.md  MOCK_DATA.md  PROMPT_PULSE_GUIDE.md  README.md  SECRETS_SETUP.md  SECRETS_SUMMARY.md  nushell-keybindings.md
scripts/: check-secrets.sh
shell/: bash.go  bash_test.go  common.go  common_test.go  fish.go  fish_test.go  nushell.go  nushell_test.go  zsh.go  zsh_test.go
status/: evaluator.go  evaluator_test.go  selector.go  selector_test.go
waifu/: api.go  api_test.go  cache.go  cache_test.go  prefetch.go  prefetch_test.go  process.go  process_test.go  render.go  render_test.go  session.go  session_test.go
(+83 files in other folders)
